force-app/main/default/objects/Saved_Quote__c/Saved_Quote__c.object-meta.xml
<CustomObject>
    <label>Saved Quote</label>
    <nameField>
        <label>Quote No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Saved Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>