force-app/main/default/objects/Saved_Quote__c/fields/idFile__c.field-meta.xml
<CustomField>
    <fullName>idFile__c</fullName>
    <label>idFile</label>
    <length>18</length>
    <type>Text</type>
</CustomField>