force-app/main/default/objects/Saved_Quote__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ITA</fullName>
            </value>
            <value>
                <fullName>EN</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>CN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>